# podder-task-foundation

./: .deepsource.toml  .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
podder_task_foundation/: __init__.py  _compat.py  bootstrap.py  cli.py  command_executor.py  context.py  data_bag.py  file.py  mode.py  parameters.py  payload.py  process.py  process_executor.py  singleton.py
podder_task_foundation/commands/: __init__.py  command.py  execute.py
podder_task_foundation/config/: __init__.py  config.py  config_file.py  process_config.py  shared_config.py
podder_task_foundation/directory_managers/: __init__.py  base_directory_manager.py  data.py  input.py  output.py  temporary.py
podder_task_foundation/exceptions/: __init__.py  config_parse_error.py  data_format_error.py  directory_not_found_error.py  immutable_object_error.py  process_error.py  target_file_not_found_error.py  unsupported_file_format_error.py  wrong_data_file_format.py
podder_task_foundation/libraries/: temporary_directory.py
podder_task_foundation/logging/: log_setting.py  stream_to_logger.py
podder_task_foundation/objects/: __init__.py  array.py  csv.py  dictionary.py  directory.py  factory.py  file.py  image.py  lazy_load_file.py  object.py  pdf.py  text.py  text_serializable.py
podder_task_foundation/pipeline/: __init__.py  job.py  pipe.py  pipeline.py  thread_with_return_value.py  unit.py
podder_task_foundation/plugin/: __init__.py  command.py  command_plugin_manager.py  object_plugin_manager.py  plugin_manager.py
podder_task_foundation/utilities/: __init__.py  data_file_loader.py  (+4 more)
tests/: test_bootstrap.py  test_config.py  test_context.py  test_data_bag.py  test_logger.py  test_parameters.py  test_payload.py  test_podder_task_foundation.py
(+23 files in other folders)
