[tool.poetry]
name = "podder-task-foundation"
version = "0.1.16"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^7.2.0"
python-dotenv = "^0.15.0"
colorlog = "^4.2.1"
PyYAML = "^5.3.1"
toml = "^0.10.1"
numpy = "^1.19.2"
ulid-py = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.5.4"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
