[tool.poetry]
name = "podder-task-foundation"
version = "0.2.9"
description = "a framework for developing prediction pipeline of ML/AL models"
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
colorlog = "^4.2.1"
PyYAML = "^5.3.1"
toml = "^0.10.1"
ulid-py = "^1.1.0"
importlib-metadata = { version = "^4.10.0", markers = "python_version < '3.8'" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.5.4"
yapf = "^0.30.0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
