[tool.poetry]
name = "podder-task-foundation"
version = "0.2.19"
description = "a framework for developing prediction pipeline of ML/AL models"
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
python-dotenv = "^1.0.0"
colorlog = "^6.7.0"
PyYAML = "^5.3.1"
toml = "^0.10.1"
ulid-py = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
isort = "^5.5.4"
yapf = "^0.32.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
